	C. Thanks Tobias Kloffel.

2025-03-17  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/column_std.C (OrganicMatter): Make 'SOM2025' default.
	* src/daisy/organic_matter/organic_std.C (SOM2000, SOM2025): New
	parameterization.
	(default): Don't give 'smb' a default value.
	* src/daisy/organic_matter/bioincorporation.C (respiration): Set
	to zero by default.

2025-03-04  Per Abrahamsen  <pa@plen.ku.dk>

	* include/daisy/chemicals/adsorption.h:
	* src/daisy/chemicals/adsorption.C (M_to_C_bisect):
	New function.
	* src/daisy/chemicals/adsorption_Python.C (M_to_C): Use
	'M_to_C_bisect' if no Python function is specified.

2025-03-03  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/chemicals/reaction_Python.C: New model.
	* src/daisy/chemicals/CMakeLists.txt: Add it.

2025-02-28  Per Abrahamsen  <pa@plen.ku.dk>

	* include/daisy/chemicals/reaction.h:
	* include/daisy/chemicals/chemistry.h (initialize): Take
	'chemistry' parameter.

2025-02-10  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/upper_boundary/bioclimate/resistance.C
	(Resistance::T_c): Fix parenthesis.

2025-01-29  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/crop/stomatacon_SHA.C (MNA): Mark obsolete.

	* src/daisy/crop/root/rubiscoNdist_DPF.C (f_photo): Removed
	parameter, redundant as cropN is already set to rubiscoN.

	* src/daisy/upper_boundary/bioclimate/difrad_DPF.C (fa): Fix
	default value and description.

	* src/daisy/upper_boundary/vegetation/vegetation_crops.C
	(LAIvsDAY): Switch domain and range.

2025-01-28  Per Abrahamsen  <pa@plen.ku.dk>

	* src/programs/program_astdump.C: New model.

	* src/object_model/units.C (Units::get_convertion): Suppress false
	positive "Wdangling-reference" warning.

2025-01-27  Per Abrahamsen  <pa@plen.ku.dk>

	* src/object_model/model.C (Model::obsolete)
	(Model::declare_obsolete): New functions.
	* src/daisy/lower_boundary/groundwater_static.C (load_frame): Use them.
	* src/daisy/output/log_alist.C (LogSubmodel::close_unnamed): Make
	sentry a symbol.