@@ -2,7 +2,29 @@
 
 * PFAS
 
-** Overfør molar mass / chemical til adsorbtion.
+* Root diffusion
+
+** Make 2D test file
+
+*** 1 m x 1m domain
+
+*** 10 cm x 10 cm grid
+
+*** Sow 2 row at 25 and 75 cm
+
+*** Log "L"
+
+*** Make 2D plot 
+
+** Make "root system" a component
+
+*** Put "uptake" code in shared part
+
+*** Put old code in "default"
+
+*** New "diffusion" model
+
+*** Require sow depth?
 
 * Gas transport
 
